syntax = "proto3";
import "public/public.proto";
package pbConversation;
option go_package = "github.com/qingw1230/study-im-server/pkg/proto/conversation";

message CreateConversationReq {
  string OwnerUserId = 1;
  string ConversationId = 2;
  int32 ConversationType = 3;
  string ConversationName = 4;
  string UserId = 5;
  string GroupId = 6;
  int32 MemberCount = 7;
  string LastMessage = 8;
  int64 LastMessageTime = 9;
}

message CreateConversationResp {
  server_api_params.CommonResp CommonResp = 1;
}

service Conversation {
  rpc CreateConversation(CreateConversationReq) returns (CreateConversationResp);
}
